--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,8 @@
 :root {
     /* Color Palette Reference: https://www.pinterest.com/pin/awesome-color-palette-333-by-awsmcolor--632896553887100842/ */
     --primary-color: #242121;
-    --secondary-color: #F8F3E3;
-    --tertiary-color: #F8C25C;
+    --secondary-color: #f8f3e3;
+    --tertiary-color: #f8c25c;
 
     /* --primary-color: lightgray;
     --secondary-color: black;
@@ -13,16 +13,16 @@ body {
     background-color: var(--primary-color);
     color: var(--secondary-color);
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     height: 100vh;
     /* hide scrollbar but allow scrolling (https://blog.hubspot.com/website/hide-scrollbar-css) */
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; /* for Firefox */
-    overflow-y: scroll; 
+    overflow-y: scroll;
 }
 
 /* hide scrollbar but allow scrolling (https://blog.hubspot.com/website/hide-scrollbar-css) */
