--- a/src/styles/Snowflakes.css
+++ b/src/styles/Snowflakes.css
@@ -33,7 +33,7 @@
 }
 
 .snowflakes {
-    position: absolute;
+    position: fixed;
     top: 0;
     height: 100vh;
     width: 100vw;
@@ -56,7 +56,6 @@
     position: fixed;
     bottom: 10px;
     right: 10px;
-    z-index: 100;
     padding: 10px;
     color: white;
     font-size: 1.5rem;
